# BigDFT-Agents

./: AGENTS.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
plugins/hpc-agentic-marketplace/.claude-plugin/: plugin.json
plugins/hpc-agentic-marketplace/skills/hpc-agentic-marketplace-maintenance/: SKILL.md
plugins/irene/: .mcp.json
plugins/irene/.claude-plugin/: plugin.json
plugins/irene/.codex-plugin/: plugin.json
plugins/irene/skills/irene-configuring/: SKILL.md
plugins/laraq/: .mcp.json
plugins/laraq/.claude-plugin/: plugin.json
plugins/laraq/.codex-plugin/: plugin.json
plugins/laraq/agents/: code-generator.md  intent-extractor.md  module-mapper.md  physics-params.md  query-expander.md
plugins/laraq/codex-agents/: code-generator.toml  intent-extractor.toml  module-mapper.toml  physics-params.toml  query-expander.toml
plugins/laraq/docs/: capabilities.md
plugins/laraq/skills/laraq-configuring/: SKILL.md
plugins/laraq/skills/laraq-generating/: SKILL.md
plugins/remotemanager/: .mcp.json
plugins/remotemanager/.codex-plugin/: plugin.json
server/: pyproject.toml  run.sh
server/irene_mcp/: compute.py  hpc_server.py
server/laraq_mcp/: config.py  doctor.py  dry_run.py  embeddings.py  executors.py  ingest.py  research.py  server.py  validator.py
server/laraq_mcp/data/docs/lessons/: ComplexityReduction.md  Gaussian.md  GeometryOptimization.md  MachineLearning.md  MolecularDynamics.md
server/laraq_mcp/data/docs/school/: CMDStart.md  InitialRuns.md  InitialRunsLinearScaling.md  Introduction.md  QuickStart.md  System-Generation.md  System-Manipulation.md  implicit-solvation.md
server/laraq_mcp/data/docs/tutorials/: CH4.md  CH4_aiida.md  CalculatorsExamples.md  Datasets.md  DoS-Manipulation.md  IO.md  Interoperability-Simulation.md  Interoperability-Visualization.md  Logfile-basics.md  N2-solution.md  N2.md  PDoS.md  Rototranslations.md  SolidState.md  Systems.md  Tight-Binding.md
server/laraq_mcp/data/docs_index/ollama-qwen3-embedding/: chunks.json  meta.json
server/tests/: laraq_smoke.py  laraq_test_dry_run.py  laraq_test_executors.py  laraq_test_research.py  laraq_test_validator.py
(+4 files in other folders)
